Added store button

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                     </a>
 
                     <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
+                        Kingdom Resources
                     </a>
 
                     <a class="navbar-item" href="https://kingdomblog.tech">
@@ -97,9 +97,9 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://kingdomappsolutions.tech/mission-vision-values.html">
-                            <i class="fas fa-info-circle"></i>
-                            &nbsp;&nbsp; <strong>Our Values</strong>
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                            <i class="fas fa-store"></i>
+                            &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
                         </div>
                     </div>
@@ -125,16 +125,16 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Kingdom Application Solutions LLC is a software development company that strives to glorify God through the creation and distribution of quality mobile apps and quality website design & development for churches, ministries, missionaries, and religious non-profit organizations.
+                    Kingdom Application Solutions LLC is a software development company that strives to glorify God through the creation and distribution of quality software and computer peripherals. We seek to aid any organization, small or large, that needs and desires mobile app development, website development, graphic design, or computer parts and peripherals. We aim to make these products and services more accessible especially to churches, ministries, missionaries, and religious non-profit organizations.
 
-                    Our goal is to provide quality mobile apps and website development either through a content management system or with custom HTML to deploy to your domain. Our user-friendly mobile apps will be deployed on both the Google Play Store and the Apple App Store and our websites are hosted on a fast server with little to no downtime.
+                    Our goal is to provide quality mobile apps and website development either through a content management system or with custom HTML to deploy to your domain. Our user-friendly mobile apps will be deployed on both the Google Play Store and the Apple App Store and our websites are hosted on a fast server with little to no downtime. Our graphic design services are all custom and include things such as logos, graphics for printables, or brochures. Our online store provides computers, computer parts, and computer peripherals at a reasonable price.
                 </h2><br>
                 <h1 class="title">
                     Our Founder
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    My name is Justin Owens. I am a former missionary in Estonia and Ukraine and former pastor in Texas. I have been developing for the web since the early 2000s and have been deploying mobile apps since 2019. I have designed multiple websites and managed content management systems for ministry organizations as well as deployed a number of mobile apps to the Google Play Store and the Apple App Store. I am passionate about designing quality mobile apps and developing user-friendly websites that glorify God and help bring people to Jesus!
+                    My name is Justin Owens. I am a former missionary in Estonia and Ukraine and former pastor in Texas. I have been developing for the web since the early 2000s and have been deploying mobile apps since 2019. I have designed multiple websites and managed content management systems for ministry organizations as well as deployed a number of mobile apps to the Google Play Store and the Apple App Store. I am passionate about designing quality mobile apps, developing user-friendly websites, providing quality graphic designs, and offering computer parts and accessories all for the glorify God!
                 </h2><br>
                 <div class="columns is-centered">
                     <div class="column is-half">
