--- a/apps.html
+++ b/apps.html
@@ -61,7 +61,7 @@
                     </a>
 
                     <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
+                        Kingdom Resources
                     </a>
 
                     <a class="navbar-item" href="https://kingdomblog.tech">
@@ -97,9 +97,9 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://kingdomappsolutions.tech/mission-vision-values.html">
-                            <i class="fas fa-info-circle"></i>
-                            &nbsp;&nbsp; <strong>Our Values</strong>
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                                <i class="fas fa-store"></i>
+                                &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Hybrid mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring mobile app development to churches, ministries, missionaries, and religious non-profit organizations at an affordable price. Often mobile app development costs tens of thousands of dollars which smaller organizations cannot cover. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps.
+                    Hybrid mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring affordable mobile app development to small businesses, medium-sized organizations, churches, ministries, missionaries, and religious non-profit organizations. Often mobile app development costs tens of thousands of dollars which smaller organizations cannot cover. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps.
                 </h2><br>
                 <p></p>
                 <h1 class="title">
@@ -133,7 +133,7 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    A custom hybrid mobile app for your organization can enable you to effectively communicate with your congregation, ministry target area, mission field, or within your non-profit organization. Listed below are the custom app development packages Kingdom Application Solutions LLC offers to get your mobile app up and running and deployed to both major app stores. Contact us through the contact page if you are interested in custom app development.
+                    A custom hybrid mobile app for your organization can enable you to effectively communicate with your customers, congregation, ministry target area, mission field, or within your organization. Listed below are the custom app development packages Kingdom Application Solutions LLC offers to get your mobile app up and running and deployed to both major app stores. Contact us through the contact page if you are interested in custom app development.
                 </h2><br>
                 <div class="columns">
                     <div class="column">
