--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                     </a>
 
                     <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
+                        Kingdom Resources
                     </a>
 
                     <a class="navbar-item" href="https://kingdomblog.tech">
@@ -97,9 +97,9 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://kingdomappsolutions.tech/mission-vision-values.html">
-                            <i class="fas fa-info-circle"></i>
-                            &nbsp;&nbsp; <strong>Our Values</strong>
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                                <i class="fas fa-store"></i>
+                                &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    We are excited to hear from you and how we can work with you to aid in your mobile app development or website development needs! Please fill out the contact form below and we will get back with you as soon as we can!
+                    We are excited to hear from you and how we can work with you to aid in your mobile app development, website development, or graphic design needs! Please fill out the contact form below and we will get back with you as soon as we can!
                 </h2>
             
                 <form id="contactForm" action="mail.php" method="POST">
@@ -155,8 +155,10 @@
                                     </option>
                                     <option>Website Development
                                     </option>
+                                    <option >Graphic Design</option>
                                     <option>Pricing Question(s)</option>
                                     <option>Privacy Policy Question(s)</option>
+                                    <option>Affiliate Disclosure Question(s)</option>
                                 </select>
                             </div>
                         </div>
