--- a/graphic-design.html
+++ b/graphic-design.html
@@ -62,7 +62,7 @@
                     </a>
 
                     <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
+                        Kingdom Resources
                     </a>
 
                     <a class="navbar-item" href="https://kingdomblog.tech">
@@ -98,9 +98,9 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://kingdomappsolutions.tech/mission-vision-values.html">
-                            <i class="fas fa-info-circle"></i>
-                            &nbsp;&nbsp; <strong>Our Values</strong>
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                                <i class="fas fa-store"></i>
+                                &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        Graphic Design for Your Church or Ministry!  
+                        Graphic Design for Your Organization!  
                     </h1>
                     <img class="home-image" src="./images/header.png" width="300" alt="Logo">
                 </div>
@@ -122,7 +122,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Along with mobile app development and website development, Kingdom Application Solutions LLC provides a wide range of graphic design options. Whether you need a logo, printable graphics, or social media graphics, we can help! Quality graphic work allows your church, ministry, or religious non-profit to stand apart from the rest and make a greater impact for the kingdom! Custom graphic design for your church, ministry, or religious non-profit can enable you to effectively communicate, give out information, and connect others with Jesus Christ.
+                    Along with mobile app development and website development, Kingdom Application Solutions LLC provides a wide range of graphic design options. Whether you need a logo, printable graphics, or social media graphics, we can help! Quality graphic work allows your small business, organization, church, ministry, or religious non-profit to stand apart from the rest and make a greater impact! Custom graphic design can enable you to effectively communicate, give out information, and connect with others.
                 </h2><br>
                 <h1 class="title">
                     Pricing
