--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </a>
 
                     <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
+                        Kingdom Resources
                     </a>
 
                     <a class="navbar-item" href="https://kingdomblog.tech">
@@ -97,9 +97,9 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://kingdomappsolutions.tech/mission-vision-values.html">
-                            <i class="fas fa-info-circle"></i>
-                            &nbsp;&nbsp; <strong>Our Values</strong>
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                                <i class="fas fa-store"></i>
+                                &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                         <img class="home-image" src="./images/header.webp" width="500" height="281" alt="Our logo">
                     </picture><br>
                     <h1 class="title white-text">
-                        Glorifying God by Developing Quality Mobile Apps and Websites!
+                        Glorifying God by Developing Quality Mobile Apps,  Websites, & Graphic Design!
                     </h1>
                 </div>    
             </div>     
@@ -130,7 +130,7 @@
                             Who We Are
                         </h2>
                         <h4 class="subtitle justify">
-                            We are a web & mobile software development company that strives to glorify God through the creation and distribution of quality mobile apps and website design & development for churches, ministries, missionaries, and other religious non-profit organizations. 
+                            We are a software development company that strives to glorify God through the creation and distribution of quality software and computer peripherals for small businesses, churches, ministries, missionaries, and non-profit organizations. 
                         </h4>
                         <h4 class="subtitle">
                             Our four core values are:
@@ -173,7 +173,7 @@
                             Mobile Apps
                         </h2>
                         <h4 class="subtitle justify">
-                            We offer hybrid mobile app development for churches, ministries, missionaries, and other religious non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions that provide solutions to common ministry-related problems as well as providing entertainment value. These apps cover a wide range of genres including ministry, missions, and some games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store.
+                            We offer hybrid mobile app development for small businesses, churches, ministries, missionaries, and non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions for both ministry purposes and entertainment value. These apps cover a wide range of genres including ministry, missions, and some games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/apps.html">
                         <b>About Mobile App Development</b>
@@ -191,7 +191,7 @@
                             Website Development
                         </h2>
                         <h4 class="subtitle justify">
-                            We offer the design and development of custom websites for any church, ministry, missionary/church planter, or religious non-profit interested in having a quality-made website. We also offer the creation of websites through a content manangement option. Our website development service is a monthly charge that includes development and site maintenance.
+                            We offer the design and development of custom websites for any small business, church, ministry, missionary/church planter, or non-profit organization interested in having a quality-made website. We also offer the creation of websites through a content manangement option. Our website development service is a monthly charge that includes development and site maintenance.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/websites.html">
                             <b>About Website Development</b>
