--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -61,7 +61,7 @@
                     </a>
 
                     <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
+                        Kingdom Resources
                     </a>
 
                     <a class="navbar-item" href="https://kingdomblog.tech">
@@ -96,9 +96,9 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://kingdomappsolutions.tech/mission-vision-values.html">
-                            <i class="fas fa-info-circle"></i>
-                            &nbsp;&nbsp; <strong>Our Values</strong>
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                                <i class="fas fa-store"></i>
+                                &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
                         </div>
                     </div>
@@ -128,14 +128,14 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality mobile apps and website design & development for churches, ministries, missionaries, and religious non-profit organizations.
+                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality mobile apps, custom website design & development, graphic design work, and the sale of computers and computer peripherals.
                 </h2><br><hr>
                 <h1 class="title">
                     Our Vision
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC envisions a global impact from its mobile apps and website design and development. We envision aiding churches, ministries, missionaries, and other religious non-profit organizations in reaching the world for Christ and bringing people into a saving relationship with Him through quality web & mobile software development. 
+                    Kingdom Application Solutions LLC envisions a global impact from its products and services. We envision aiding small businesses, churches, ministries, missionaries, and other non-profit organizations in reaching their customers and congregations better to further their organizational goals and mission. 
                 </h2><br><hr>
                 <h1 class="title">
                     Our Values
@@ -182,7 +182,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    Our company exists to help churches, ministries, missionaries, and religious non-profit organizations to have access to quality made websites and mobile apps. We make every decision and measure every outcome based on how well it serves our clients and how it builds the Kingdom. We listen to our clients’ needs, provide options, and deliver beyond their expectations.
+                                    Our company exists to help businesses, churches, ministries, missionaries, and non-profit organizations to have access to quality made websites, mobile apps, graphic design, and computer accessories. We make every decision and measure every outcome based on how well it serves our clients and how it builds the Kingdom. We listen to our clients’ needs, provide options, and deliver beyond their expectations.
                                 </div>
                             </div>
                         </div>
