--- a/resources.html
+++ b/resources.html
@@ -62,7 +62,7 @@
                     </a>
 
                     <a class="navbar-item is-active" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
+                        Kingdom Resources
                     </a>
 
                     <a class="navbar-item" href="https://kingdomblog.tech">
@@ -98,9 +98,9 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://kingdomappsolutions.tech/mission-vision-values.html">
-                            <i class="fas fa-info-circle"></i>
-                            &nbsp;&nbsp; <strong>Our Values</strong>
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                                <i class="fas fa-store"></i>
+                                &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        Kingdom-Focused Resources to Aid Your Christian Walk
+                        Kingdom-Focused Resources
                     </h1>
                     <picture>
                         <source srcset="./images/header.webp" type="images/webp">
