--- a/services.html
+++ b/services.html
@@ -61,7 +61,7 @@
                     </a>
 
                     <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
+                        Kingdom Resources
                     </a>
 
                     <a class="navbar-item" href="https://kingdomblog.tech">
@@ -97,9 +97,9 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://kingdomappsolutions.tech/mission-vision-values.html">
-                            <i class="fas fa-info-circle"></i>
-                            &nbsp;&nbsp; <strong>Our Values</strong>
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                                <i class="fas fa-store"></i>
+                                &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Presently, we offer two main services at Kingdom Application Solutions LLC: hybrid mobile application development and website design and development for churches, ministries, missionaries, and religious non-profit organizations. Each of these services has the goal of advancing the kingdom and glorifying God through their creation. Click the link in each card below for more information for each of the services we offer.
+                    Presently, we offer three main services at Kingdom Application Solutions LLC: hybrid mobile application development, website design and development, and graphic design work for small businesses, churches, ministries, missionaries, and non-profit organizations. Each of these services has the goal of glorifying God through their creation. Click the link in each card below for more information for each of the services we offer.
                 </h2><br>
                 <div class="columns is-centered">
                     <div class="column">
@@ -138,7 +138,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content justify">
-                                    We offer hybrid mobile app development for churches, ministries, missionaries, and religious non-profit organizations that wouldn't otherwise be able to have a mobile app presense. Our aim is to bring quality mobile app development to your organization at an affordable price.
+                                    We offer hybrid mobile app development for small businesses, churches, ministries, missionaries, and non-profit organizations that wouldn't otherwise be able to have a mobile app presense. Our aim is to bring quality mobile app development to your organization at an affordable price.
                                     <br><br>
                                     Click the link to see more information about pricing for <u><a href="https://kingdomappsolutions.tech/apps.html">custom mobile app development</a></u>. <br><br><br>
                                 </div>
@@ -156,7 +156,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content justify">
-                                    We offer the design and development of custom websites for churches, ministries, missionaries, and religious non-profit organizations. We primarily do this through the use of HTML, CSS, and JavaScript. We utilize popular custom elements to build a website to meet your needs, increase performance, and aid in search engine optimization. <br><br> We also offer the creation of websites through a content manangement option if that fits your needs better for easy updating. Click the link for information about <u><a href="https://kingdomappsolutions.tech/websites.html">website development pricing</a></u> for both custom and content management systems.<br>
+                                    We offer the design and development of custom websites for small businesses, churches, ministries, missionaries, and non-profit organizations. We primarily do this through the use of HTML, CSS, and JavaScript. We utilize popular custom elements to build a website to meet your needs, increase performance, and aid in search engine optimization. <br><br> We also offer the creation of websites through a content manangement option if that fits your needs better for easy updating. Click the link for information about <u><a href="https://kingdomappsolutions.tech/websites.html">website development pricing</a></u> for both custom and content management systems.<br>
                                 </div>
                             </div>
                         </div>
