--- a/affiliate-disclosure.html
+++ b/affiliate-disclosure.html
@@ -61,7 +61,7 @@
                     </a>
 
                     <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
+                        Kingdom Resources
                     </a>
 
                     <a class="navbar-item" href="https://kingdomblog.tech">
@@ -97,9 +97,9 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://kingdomappsolutions.tech/mission-vision-values.html">
-                            <i class="fas fa-info-circle"></i>
-                            &nbsp;&nbsp; <strong>Our Values</strong>
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                                <i class="fas fa-store"></i>
+                                &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                             When we link to products and services, those links may be affiliate links. If you click on any of those affiliate links and make a purchase within a certain time frame, we’ll earn a small commission. The commission is paid by the retailers, at no cost to you.
                         </h2>
                         <h2 class="subtitle privacy-h2">
-                            We are careful to link to products and retailers that provide resources that are useful for ministry purposes and ones which we would use as well. Money earned helps keep Kingdom Application Solutions LLC running and allows us to continue our ministry to provide support to churches, missionaries and Christian non-profit organizations. Thank you for your support.
+                            We are careful to link to products and retailers that provide resources that are useful and ones which we would use as well. Money earned helps keep Kingdom Application Solutions LLC running and allows us to continue our business in providing our products and services to you at reasonable prices. Thank you for your support.
                         </h2><br>
                         <h2 class="subtitle privacy-h2">
                             <b>Select Affiliate Partners:</b>
@@ -138,9 +138,9 @@
                         <h2 class="subtitle privacy-h2">
                             As an Amazon Associate, I earn from qualifying purchases.
                         </h2>
-                        <h2 class="subtitle privacy-h2">
+                        <!-- <h2 class="subtitle privacy-h2">
                             Kingdom Application Solutions LLC is also a member of Church Source through the Share-A-Sale program as well as the Christianbook.com affiliate program. 
-                        </h2>
+                        </h2> -->
                     </div>
                     <div class="column">
                         <picture>
