--- a/products.html
+++ b/products.html
@@ -61,7 +61,7 @@
                     </a>
 
                     <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
-                        Resources
+                        Kingdom Resources
                     </a>
 
                     <a class="navbar-item" href="https://kingdomblog.tech">
@@ -97,9 +97,9 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button learn-more-button" href="https://kingdomappsolutions.tech/mission-vision-values.html">
-                            <i class="fas fa-info-circle"></i>
-                            &nbsp;&nbsp; <strong>Our Values</strong>
+                            <a class="button learn-more-button" href="https://store.kingdomappsolutions.tech">
+                                <i class="fas fa-store"></i>
+                                &nbsp;&nbsp; <strong>Our Store</strong>
                             </a>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Along with providing hybrid mobile app development and website development services, Kingdom Application Solutions LLC produces it's own line of software products. Currently, we have several mobile apps developed and deployed to the app stores. More software products are in development and will be released at a later time and reflected on this page.
+                    Along with providing hybrid mobile app development, website development services, graphic design services, and computer accessories, Kingdom Application Solutions LLC produces it's own line of software products. Currently, we have several mobile apps developed and deployed to the app stores. More software products are in development and will be released at a later time and reflected on this page.
                 </h2><br>
                 <p></p>
                 <h1 class="title">
